add: less目录及demo示例

--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -1,4 +1,4 @@
-.base(){
+
   html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img { margin:0; padding:0; }
   fieldset, img { border:none; }
   //img{display: block;}
@@ -22,6 +22,9 @@
   ul,li{
       list-style: none;
   }
+  p, h1, h2, h3, h4, h5, h6{
+      line-height: 1.5;
+  }
   .clearfix() {
       &:before,
       &:after {
@@ -32,4 +35,3 @@
           clear: both;
       }
   }
-}
