--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,2 +1,14 @@
 // 引入基本样式
 @import 'base/base.less';
+@import 'base/fun.less';
+@import 'base/variable.less';
+
+// 引入组件样式
+@import 'widget/backtop.less';
+
+// 以下为页面自定义样式
+.h1{
+    a{
+        // demo
+    }
+}
