--- a/src/css/iconfont.css
+++ b/src/css/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "uf";
-  src: url('../src/fonts/iconfont.eot?t=1484113499288'); /* IE9*/
-  src: url('../src/fonts/iconfont.eot?t=1484113499288#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../src/fonts/iconfont.woff?t=1484113499288') format('woff'), /* chrome, firefox */
-  url('../src/fonts/iconfont.ttf?t=1484113499288') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('../src/fonts/iconfont.svg?t=1484113499288#uf') format('svg'); /* iOS 4.1- */
+  src: url('../fonts/iconfont.eot?t=1484113499288'); /* IE9*/
+  src: url('../fonts/iconfont.eot?t=1484113499288#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/iconfont.woff?t=1484113499288') format('woff'), /* chrome, firefox */
+  url('../fonts/iconfont.ttf?t=1484113499288') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('../fonts/iconfont.svg?t=1484113499288#uf') format('svg'); /* iOS 4.1- */
 }
 
 .uf {
